# video-summarize

./: .gitignore  README.md  abalation.md  abalation.py  app.py  bash.txt  compares-optimize.md  compares-optimize.py  compares.md  proporsal.md  proporsal.tex  pyproject.toml  report.md  report.tex  requirements.txt  run_all.ps1  run_all.sh  train-abalation.py
.streamlit/: config.toml
checkpoints-optimize/: .gitkeep
checkpoints/ablation_runs/no_attention/: .gitkeep
configs/: config.yaml
docs/: optimize.md
docs/relative/: BRANCH_COMPARISON.md
docs/report/: Multimodal Video Summarization with Supervised Learning.pptx  abalation.md  compares.md  report.md  report.tex
scripts/: download_datasets.py  extract_features.py  prepare_summe_tvsum.py  run_eval.py  run_inference.py  train.py  train_multimodal.py
src/: __init__.py
src/config/: __init__.py  loader.py
src/data/: __init__.py  dataloader.py  dataset.py  feature_loader.py  h5_summe_tvsum.py  label_loader.py  multimodal_loader.py  summe_tvsum.py
src/evaluation/: __init__.py  keyshot.py  metrics.py
src/features/: __init__.py  audio_extractor.py  cnn_extractor.py  frame_sampler.py  pipeline.py
src/inference/: __init__.py  dynamic_summary.py  pipeline.py  static_summary.py
src/models/: __init__.py  attention.py  bilstm.py
src/training/: __init__.py  loop.py  trainer.py
src/utils/: __init__.py  logging.py  seed.py
